<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitulo"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/edtSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitulo"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtSalario"
        android:text="@string/txtTitulo2" />

    <RadioGroup
        android:id="@+id/radioG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitulo2">

        <RadioButton
            android:id="@+id/radioQuarenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioQuarenta" />

        <RadioButton
            android:id="@+id/radioQuarentaECinco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioQuarentaECinco" />

        <RadioButton
            android:id="@+id/radioCinquenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioCinquenta" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioG"
        android:text="@string/btnSalario" />


</RelativeLayout>